[package]
name = "warframe"
version = "9.0.1"
edition = "2024"
description = "An async crate to wrap Warframe's Worldstate API."
readme = "./README.md"
documentation = "https://docs.rs/warframe"
homepage = "https://docs.rs/warframe"
repository = "https://github.com/WFCD/warframe.rs"
license = "MIT"
rust-version = "1.91"

[features]
default = ["market", "worldstate"]

market = ["warframe-types/market", "market_ratelimit", "market_cache"]
worldstate = ["warframe-types/worldstate"]
profile = ["warframe-types/profile"]

market_ratelimit = ["dep:governor"]
market_cache = ["dep:moka"]

[workspace]
resolver = "3"
members = ["crates/*", "."]

[workspace.dependencies]
# workspace deps
warframe-macros = { path = "crates/warframe-macros", version = "9.0.1" }
warframe-types = { path = "crates/warframe-types", default-features = false }

# time
chrono = { version = "0.4.42", features = ["serde", "clock"] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
serde_repr = "0.1.20"
serde_with = { version = "3.16.1" }
derive_more = { version = "2.1.1", features = ["full"] }
thiserror = "2.0.17"

[dependencies]
# async web requests
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json"] }
moka = { version = "0.12.12", optional = true, features = ["future"] }
governor = { version = "0.10.4", optional = true }

# utility
thiserror = { workspace = true }
urlencoding = "2.1.3"
tracing = "0.1.44"

warframe-macros = { workspace = true }
warframe-types = { workspace = true }

serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }

derive_builder = "0.20.2"

[dev-dependencies]
rstest = "0.25.0"
tracing-subscriber = "0.3.22"

[lints.clippy]
pedantic = "warn"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
