[package]
name = "warframe-macros"
version = "9.0.1"
edition = "2024"
description = "Macros for the `warframe` crate."
readme = "../README.md"
documentation = "https://docs.rs/warframe-macros"
homepage = "https://docs.rs/warframe-macros"
repository = "https://github.com/WFCD/warframe.rs"
license = "MIT"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
manyhow = { version = "0.11.4" }
proc-macro2 = { version = "1.0.104" }
quote = { version = "1.0.42" }
syn = { version = "2.0.111", features = ["full"] }

[features]
default = ["worldstate"]
worldstate = []
